# ScenarioMax

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
devkit/nuplan-devkit/: requirements.txt
devkit/nuscenes-devkit/setup/: setup.py
docs/: API.md  ARCHITECTURE.md  DATASETS.md  adding_new_dataset.md  advanced_configuration.md  data_pipeline.md  dataset_notes.md
scenariomax/: convert_dataset.py  dataset_registry.py  logger_utils.py  tf_suppress.py  tf_utils.py
scenariomax/core/: exceptions.py  pipeline.py  types.py  unified_scenario.py  write.py
scenariomax/enhancement/: __init__.py  core.py
scenariomax/raw_to_unified/: convert_argoverse2.py  convert_nuplan.py  convert_nuscenes.py  convert_waymo.py  description.py  type.py  utils.py  write.py
scenariomax/raw_to_unified/converter/: description.py  type.py  utils.py  write.py
scenariomax/raw_to_unified/converter/argoverse2/: type.py  utils.py
scenariomax/raw_to_unified/converter/nuplan/: __init__.py  extractor.py  load.py  types.py  utils.py
scenariomax/raw_to_unified/converter/nuscenes/: __init__.py  extractor.py  load.py  types.py  utils.py
scenariomax/raw_to_unified/converter/opendrive/: __init__.py  extractor.py  load.py
scenariomax/raw_to_unified/converter/openscenes/: __init__.py  load.py
scenariomax/raw_to_unified/converter/waymo/: __init__.py  extractor.py  load.py  types.py  utils.py
scenariomax/raw_to_unified/datasets/: utils.py
scenariomax/raw_to_unified/datasets/argoverse2/: __init__.py  (+3 more)
scenariomax/scripts/: convert_scenarionet_to_tfexample.py  debug.py
scenariomax/unified_to_gpudrive/: build_gpudrive_example.py  constants.py  convert_scenarionet_to_gpudrive.py  convert_to_json.py  postprocess.py  utils.py
scenariomax/unified_to_gpudrive/converter/: roadgraph.py  state.py  traffic_light.py
scenariomax/unified_to_gpudrive/data/: map_element_ids.py
scenariomax/unified_to_tfexample/: build_tfexample.py  constants.py  convert_to_tfexample.py  exceptions.py  postprocess.py  shard_tfexample.py  utils.py
scenariomax/unified_to_tfexample/converter/: datatypes.py  path.py  roadgraph.py  scenario_analysis.py  state.py  traffic_light.py  utils.py
scenariomax/unified_to_tfrecord/: build_tfexample.py  utils.py
scenariomax/unified_to_tfrecord/converter/: datatypes.py  path.py  roadgraph.py  scenario_analysis.py  state.py  traffic_light.py  utils.py
(+41 files in other folders)
